--- a/小程序修改/小程序修改.md
+++ b/小程序修改/小程序修改.md
@@ -5,3 +5,9 @@
 # 商品属性自己怎么设置
 
 ![如何设置商品属性](https://files.catbox.moe/4skc23.png)
+
+# 修改和添加标签
+
+![修改和添加标签](https://files.catbox.moe/u1dh92.png)
+
+# 物流运费的设置
