--- a/下载京东图片的方法.md
+++ b/下载京东图片的方法.md
@@ -5,3 +5,7 @@
 # 方法2
 1. 点击下面五张的小图片，右击选择在新链接中打开图片
 2. 在新打开的链接中会出现一串链接，把其中n5改成n12
+
+# 方法3
+1. 将你的鼠标移动到小图这里的位置，右键->在新标签中打开
+2. 在打开的页面中将地址栏中的n5修改为vc然后按键盘上的enter
